[package]
name = "gtk-test"
version = "0.6.0"
authors = ["The Gtk-rs Project Developers"]
license = "MIT"
description = "Crate to test GTK UIs"
categories = ["api-bindings", "gui", "test"]
homepage = "https://gtk-rs.org/"
repository = "https://github.com/gtk-rs/gtk-test"
keywords = ["gtk", "gtk-rs", "GUI", "test", "gnome"]
documentation = "https://docs.rs/gtk-test"

[dependencies]
enigo = "^0.0.14"
gdk = { git = "https://github.com/gtk3-rs/gdk" }
glib = { git = "https://github.com/gtk-rs-core/glib" }
gtk = { git = "https://github.com/gtk3-rs/gtk" }

[[test]]
harness = false
name = "basic"

[[test]]
harness = false
name = "observer"
