[package]
name = "gtk-test"
version = "0.14.0"
authors = ["The Gtk-rs Project Developers"]
license = "MIT"
description = "Crate to test GTK UIs"
categories = ["api-bindings", "gui", "test"]
homepage = "https://gtk-rs.org/"
repository = "https://github.com/gtk-rs/gtk-test"
keywords = ["gtk", "gtk-rs", "GUI", "test", "gnome"]
documentation = "https://docs.rs/gtk-test"
edition = "2021"

[dependencies]
enigo = "^0.0.14"
gtk = "^0.14"

[[test]]
harness = false
name = "basic"

[[test]]
harness = false
name = "observer"
